# smart_mini_car_robot_ros

./: LICENSE  README.md
elegoo_car_v3_bringup/: CMakeLists.txt  README.md  package.xml
elegoo_car_v3_bringup/ino/dc_motor_control/: dc_motor_control.ino
elegoo_car_v3_bringup/ino/dc_motor_on_off/: dc_motor_on_off.ino
elegoo_car_v3_bringup/ino/dc_motor_velocity/: dc_motor_velocity.ino
elegoo_car_v3_bringup/ino/elegoo_car_basic_usage/: elegoo_car_basic_usage.ino
elegoo_car_v3_bringup/ino/elegoo_car_cmd_vel/: elegoo_car_cmd_vel.ino
elegoo_car_v3_bringup/ino/servo_control/: servo_control.ino
elegoo_car_v3_bringup/ino/sonar_and_servo/: sonar_and_servo.ino
elegoo_car_v3_bringup/scripts/: car_mov_node.py  demo_elegoo_car.py  give_me_eight.py  servo_node.py
elegoo_car_v3_description/: CMakeLists.txt  README.md  package.xml
elegoo_car_v3_description/config/: joint_names_elegoo_car_v3_description.yaml
elegoo_car_v3_description/launch/: display.launch  display_simple_model.launch  display_simple_tf.launch  display_xacro_model.launch  gazebo.launch
elegoo_car_v3_description/meshes/: arduino.STL  base_link.STL  batery.STL  hex_support_1.STL  hex_support_2.STL  hex_support_3.STL  hex_support_4.STL  hex_support_5.STL  hex_support_6.STL  medium_plate.STL  motor_1.STL  motor_2.STL  motor_3.STL  motor_4.STL  neumatic_1.STL  neumatic_2.STL  neumatic_3.STL  neumatic_4.STL  ring_1.STL  ring_2.STL  ring_3.STL  ring_4.STL  servo.STL  servo_base.STL  servo_shaft.STL  shaft_1.STL  shaft_2.STL  shaft_3.STL  shaft_4.STL  support_1.STL  support_2.STL  support_3.STL  suppport_4.STL  ultrasonic_sensor.STL  ultrasonic_support.STL
elegoo_car_v3_description/rviz/: basic_display.rviz  display_tf.rviz
elegoo_car_v3_description/urdf/: colors_and_materials.xacro  elegoo_car_v3_description.csv  elegoo_car_v3_description.urdf  elegoo_car_v3_description.urdf.xacro  elegoo_car_v3_description.xacro  elegoo_car_v3_gazebo.urdf  elegoo_car_v3_gazebo.urdf.xacro
elegoo_car_v3_gazebo/: CMakeLists.txt  README.md  package.xml
elegoo_car_v3_gazebo/launch/: elegoo_car_v3_simple_room.launch  elegoo_car_v3_world_urdf.launch  elegoo_car_v3_world_xacro.launch
elegoo_car_v3_gazebo/worlds/: elegoo_car_v3_simple_room.world
