<?xml version="1.0"?>
<package format="2">
  <name>elegoo_car_v3_bringup</name>
  <version>1.2.0</version>
  <description>A ROS package for using ELEGOO BLE TOO CAR with ROS by using
               rosserial with Arduino.</description>

  <maintainer email="dfelipe.lopez@gmail.com">DanielFLopez1620</maintainer>
  <license>BSD 3-Clause License</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
