<package format="2">
  <name>elegoo_car_v3_description</name>
  <version>1.7.1</version>
  <description>
    <p>URDF Description package for elegoo_car_v3_description</p>
    <p>This package contains configuration data, 3D models and launch files
for elegoo_car_v3_description robot</p>
  </description>
  <author email="dfelipe.lopez@gmail.com">DanielFLopez1620</author>
  <maintainer email="dfelipe.lopez@gmail.com">DanielFLopez1620</maintainer>
  <url type="repository">https://github.com/DanielFLopez1620/smart_mini_car_robot_ros/tree/main</url>
  <license>BSD 3-Clause License</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>

  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>

  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <architecture_independent />
  </export>
</package>